# xrally-docker

./: .travis.yml  Dockerfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
rally_docker/: credential.py
rally_docker/contexts/: base.py  cleanup.py  images.py
rally_docker/scenarios/: base.py  container.py
samples/deployments/: README.rst  existing-custom.json  existing-default.json
samples/envs/: existing-custom.json  existing-custom.yaml  existing-default.json  existing-default.yaml
samples/tasks/contexts/: images-existing.json  images-existing.yaml  images.json  images.yaml  networks.json  networks.yaml
samples/tasks/scenarios/: docker-create-and-delete-network.json  docker-create-and-delete-network.yaml  docker-list-networks.json  docker-list-networks.yaml  docker-run-container.json  docker-run-container.yaml
tasks/: all-in-one.json
tests/ci/: cover.sh  pytest_launcher.py  run_at_travis.sh  run_task.sh
tests/unit/: __init__.py  test.py  test_samples.py  test_service.py
tests/unit/common/: test_service.py
tests/unit/common/cleanup/: test_manager.py  test_resources.py
tests/unit/doc/: test_docstrings.py  test_jsonschemas.py  test_task_samples.py
tests/unit/scenarios/: test_container.py
tests/unit/task/: test_validators.py
tests/unit/task/contexts/: test_cleanup.py  test_images.py  test_networks.py
tests/unit/task/scenarios/: test_container.py  test_networks.py
xrally_docker/: README.md  __init__.py  client.py  context.py  credential.py  scenario.py  service.py
xrally_docker/common/: opts.py
xrally_docker/common/cleanup/: manager.py  resources.py
xrally_docker/contexts/: base.py  cleanup.py  images.py
xrally_docker/scenarios/: container.py
xrally_docker/task/: context.py  scenario.py  validators.py
xrally_docker/task/contexts/: cleanup.py  images.py  networks.py
xrally_docker/task/scenarios/: container.py  networks.py
