[metadata]
name = rally-docker
summary = Docker plugins for Rally Framework
description-file = README.rst
author = Andrey Kurilin
home-page = http://docs.openstack.org/developer/rally/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    rally_docker

data_files =
    etc/bash_completion.d =
        etc/rally.bash_completion

[entry_points]
rally_plugins =
    path=rally_docker

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
