[metadata]
name = xrally-docker
summary = Docker plugins for Rally Framework
description-file = README.md
author = Andrey Kurilin
home-page = https://rally.readthedocs.io
license = Apache License, Version 2.0
classifier =
    Environment :: Docker
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    xrally_docker

[entry_points]
rally_plugins =
    path = xrally_docker
    options = xrally_docker.common.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook
